REMOVED: links to blog CHANGED: pricing details.

--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -52,7 +52,6 @@
         </div>
     </ng-container>
 
-
     <div class="spotbiePurchaseIncentives d-flex align-content-center justify-content-center align-middle text-decoration-underline">
       <div (click)="openPurchaseIncentives(3)">The Idea</div>
       <div (click)="openPurchaseIncentives(2)">How Does it work?</div>
@@ -80,7 +79,7 @@
     </div>
 
     <p class="sb-text-light-green-gradient text-center mt-2 mb-2">
-        REWARDS, REWARD RATES, & DISCOUNTS
+        EXPOSURE CAMPAIGNS, REWARDS, PROXIMITY
         <br/><br/>
     </p>
 
@@ -171,9 +170,5 @@
         <i class="fab fa-instagram" (click)="openIg()"></i>
         <i class="fab fa-twitter" (click)="openTwitter()"></i>
         <i class="fab fa-youtube" (click)="openYoutube()"></i>
-    </div>
-
-    <div class="mt-4 text-uppercase spotbie-text-link cursor-pointer">
-        <span (click)="openBlog()">BLOG</span>
     </div>
 </div>
