--- a/src/app/pricing/pricing.component.css
+++ b/src/app/pricing/pricing.component.css
@@ -15,6 +15,11 @@
 #sbReadImageUsers{
   background: url('../../assets/images/home_imgs/jpg/spotbie-miami-shopping.jpg')
 }
+
+/*.spotbie-overlay-window{
+  background-color: #d4d4d4 !important;
+}*/
+
 .fa-users,
 .fa-hamburger,
 .fa-dollar-sign,
@@ -76,6 +81,7 @@ h6{
 .menu-padding{
   margin-top: 120px;
 }
+
 .sb-packetWrapper{
   max-width: 325px;
   width: 325px;
@@ -84,10 +90,37 @@ h6{
   border-radius: 20px;
   padding: 25px 30px;
   border: 1px solid #d5d5d526;
+  /*  background-color: #222224;*/
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
+
+/*.sb-text-light-green-gradient {
+  background: -webkit-linear-gradient(0deg,#ece4ff,#6d8ac5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  letter-spacing: 2px;
+}*/
+
+/*.spotbie-button{
+  color: white !important;
+  background: linear-gradient(178deg,#6f5aa9,#4c3d74);
+}*/
+
+.removeBorder{
+  border: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 300px;
+/*  color: white !important;
+  background: linear-gradient(178deg,#6f5aa9,#4c3d74);*/
+}
+
+/*.sb-footer {
+  background: #332f3e;
+}*/
+
 .sb-packetWrapper span,
 .sb-packetWrapper p{
   font-size: .6rem;
