ADDED: food truck

--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.css
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.css
@@ -22,6 +22,9 @@
 .sb-userName{
     text-transform: uppercase;
 }
+.faFoodTruck {
+    color: white;
+}
 
 @media(max-width:960px){
   .sb-desktopNavBar{
