--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -53,6 +53,12 @@
       <span (click)="logOut()">
         LOG OUT
       </span>
+
+      <ng-container *ngIf="(user$ | async)?.business.is_food_truck">
+        <span (click)="updateFoodTruck()" style="cursor: pointer">
+          <fa-icon class='faFoodTruck' [icon]="faFoodTruck"></fa-icon>
+        </span>
+      </ng-container>
     </td>
   </tr>
 </table>
