--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
@@ -35,6 +35,29 @@
         </span>
       </h6>
     </div>
+
+    <ng-container *ngIf="((canUseTiers$ | async) === true); else upgradeForTiers">
+      <div style="cursor: pointer;"
+           class="mt-4"
+           *ngIf="userType !== eAllowedAccountTypes.Personal"
+           (click)="manageLoyaltyTiers()">
+        <span class='spotbie-text-gradient'>MANAGE TIERS </span><i class='fa fa-coins'></i>
+      </div>
+
+      <ng-container *ngIf="openTiers">
+        <app-tier-creator (closeTiers)="openTiers = false"></app-tier-creator>
+      </ng-container>
+    </ng-container>
+
+    <ng-template #upgradeForTiers>
+      <div style="cursor: pointer;"
+           class="mt-4"
+           *ngIf="userType !== eAllowedAccountTypes.Personal">
+        <span class='spotbie-text-gradient'>Looking for Loyalty Tiers? </span>
+        <i class='fa fa-coins'></i><br/>
+        <span class="text-decoration-underline" style="color: white; font-size: .7em;">Upgrade to Intermediate.</span>
+      </div>
+    </ng-template>
   </div>
 
   <div class='spotbie-text-gradient text-uppercase' (click)="closeWindow()" *ngIf="fullScreenMode">CLOSE</div>
