ADDED: loyalty point tiers

--- a/src/app/spotbie/community-member/community-member.component.html
+++ b/src/app/spotbie/community-member/community-member.component.html
@@ -4,6 +4,7 @@
                  [lng]="lng"
                  [categories]="categories"
                  [accountType]="business.user_type"
+                 [businessTiers]="loyaltyTiers$ | async"
                  (closeWindow)="closeWindow()"
                  *ngIf="infoObjectLoaded"
                  [fullScreenMode]="fullScreenMode"></app-info-object>
