--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -561,7 +561,8 @@
     </div>
   </div>
 
-  <app-info-object [infoObject]="infoObject"
+  <app-info-object  [infoObject]="infoObject"
+                    [businessTiers]="infoObject.loyalty_tiers"
                     [eventsClassification]="eventsClassification"
                     [accountType]="searchCategory"
                     [categories]="number_categories"
