--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.html
@@ -21,8 +21,8 @@
 
         <div class='spotbie-info-object-image-thumb discount'
             *ngIf="reward.type === 1 || reward.type === 2"
-            [ngStyle]="{ 'background': 'linear-gradient(90deg,#35a99f,#64e56f)' }">
-
+            [ngStyle]="{ 'background': 'linear-gradient(90deg,#35a99f,#64e56f)' }"
+        >
             <h6 *ngIf="reward.type === 1">
                 <span class='sb-text-light-green-gradient'>
                     {{  reward.point_cost * (userPointToDollarRatio / 100) | currency : 'USD' }} DISCOUNT
@@ -33,7 +33,6 @@
 
     <h3 class="sb-text-light-green-gradient text-uppercase mt-5">
         {{ reward.point_cost | number:'1.00':'en-US' }} LP COST
-
     </h3>
 
     <h5 class="spotbie-text-gradient text-uppercase mt-2">
@@ -43,6 +42,13 @@
     <div class='spotbie-communityMemberDescription spotbie-text-gradient mt-4 mb-4'>
         {{ reward.description }}
     </div>
+
+    <ng-container *ngIf="tier">
+      <div class='spotbie-communityMemberDescription spotbie-text-gradient mt-4 mb-4'>
+        Reward Tier Entrance: <span class="sb-text-light-green-gradient">{{ tier.lp_entrance | number: '1.00':'en-US' }}</span>
+        Loyalty Points at <span class="sb-text-light-green-gradient">{{ business.name }}</span>.
+      </div>
+    </ng-container>
 
     <div class='spotbie-share-buttons-wrappper' *ngIf="reward !== undefined">
 
