--- a/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
+++ b/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
@@ -63,7 +63,7 @@
     </div>
 
     <div *ngIf="lpRedeemed">
-      <div class="card spotbie-redeemedItem" *ngFor="let redeemedItem of lpRedeemedList">
+      <div class="card spotbie-redeemedItem" *ngFor="let redeemedItem of lpRedeemedList; trackBy:identify">
         <div class='card-header'>
           <span class='sb-text-light-green-gradient'>{{ redeemedItem.business.name }}</span>
 
@@ -78,9 +78,10 @@
           </div>
 
           <div class='mb-2'>
-            Loyalty Points <span class='sb-text-light-green-gradient'>
-                          +{{ redeemedItem.amount | number:'1.0':'en-US' }}
-                      </span>
+            Loyalty Points
+            <span class='sb-text-light-green-gradient'>
+                +{{ redeemedItem.amount | number:'1.0':'en-US' }}
+            </span>
           </div>
 
           <div class='mb-2'>
@@ -93,6 +94,17 @@
 
           <div class='mb-2'>
             Reward Rate <span class='sb-text-light-green-gradient'>{{ redeemedItem.loyalty_point_dollar_percent_value | number:'1.2':'en-US' }}%</span>
+          </div>
+
+          <div class="mb-2">
+            <button color="secondary" size="small" (click)="leaveFeedback(redeemedItem)">
+              <ng-container *ngIf="!redeemedItem.feedback">
+                Leave Feedback
+              </ng-container>
+              <ng-container *ngIf="redeemedItem.feedback">
+                View Your Feedback
+              </ng-container>
+            </button>
           </div>
         </div>
 
@@ -118,9 +130,9 @@
           </div>
 
           <div class='mb-2'>
-                <span [ngClass]="getLpStyle(legerRecord.loyalty_amount)">
-                    {{ legerRecord.loyalty_amount | number:'1.0':'en-US' }}
-                </span> Loyalty Points
+            <span [ngClass]="getLpStyle(legerRecord.loyalty_amount)">
+                {{ legerRecord.loyalty_amount | number:'1.0':'en-US' }}
+            </span> Loyalty Points
           </div>
         </div>
 
@@ -146,15 +158,15 @@
           </div>
 
           <div class='mb-2'>
-                  <span [ngClass]="getLpStyle(balance.balance)">
-                      {{ balance.balance | number:'1.0':'en-US' }}
-                  </span> Loyalty Points
+            <span [ngClass]="getLpStyle(balance.balance)">
+                {{ balance.balance | number:'1.0':'en-US' }}
+            </span> Loyalty Points
           </div>
 
           <div class='mb-2'>
-                  <span [ngClass]="getLpStyle(balance.balance_aggregate)">
-                      {{ balance.balance_aggregate | number:'1.0':'en-US' }}
-                  </span> All Time LP
+            <span [ngClass]="getLpStyle(balance.balance_aggregate)">
+                {{ balance.balance_aggregate | number:'1.0':'en-US' }}
+            </span> All Time LP
           </div>
 
           <div class='mb-2'>
