REMOVED: Fixed bottom banner not swtiching ads CHANGED: some wording about receipt scanning CHANGED: Calculate loyaltyPointReward correctly in qr component CHANGED: Prefix reward creator input with dollar sign

--- a/src/app/how-does-it-work/how-does-it-work.component.html
+++ b/src/app/how-does-it-work/how-does-it-work.component.html
@@ -38,27 +38,26 @@
             they are ready to go to the next step in the sales funnel; and that is making the purchase. It's just a question of where
             they will go now.
 
-            We advertise our local SpotBie Community Members in different ways; at local events, gatherings, meet-ups,
-            breaches, parks, and more. You won't have to worry about managing your ads campaign with us.
+            We advertise our local SpotBie Community Members at different times and locations. You won't have to worry about managing your ads campaign with us.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">In-Platform Advertising</h2>
           <p>
             As part of your membership, you will receive a new in-app Ad design every six months. Everyone gets a fair chance
-            for the spot-light in our app. Our algorithm assigns SpotBie Community Exposure in an orderly manner so that all of
+            for the spot-light in our app. Our algorithm assigns SpotBie Community Members Exposure in a systematic manner so that all of
             them get the same amount of views.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Loyalty Points</h2>
           <p>
-            Our users claim Loyalty Points by scanning receipts from their everyday purchases. SpotBie users can then
-            claim rewards at Local Restaurants and Stores.
+            Our users claim Loyalty Points by making purchases at SpotBie Community Member locations. SpotBie users can then
+            claim rewards once they have enough points.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Upload Rewards</h2>
           <p>
             As the business owner you can upload the best of your menu items onto your digital rewards menu to entice your audience.
-            Each reward you upload also carries a minimum spend policy (how much users must spend in order to redeem this reward).
+            Each reward you upload can also carry a minimum spend policy (how much users must spend in order to redeem this reward).
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Redeeming Rewards</h2>
