--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -45,7 +45,7 @@
                     colorLight="#64e56f"
                     [errorCorrectionLevel]="correctionLevel"></ngx-qrcode>
 
-        <p class="spotbie-text-gradient text-center text-uppercase mt-3">scan once per user</p>
+        <p class="spotbie-text-gradient text-center text-uppercase mt-3">scan once per bill</p>
 
         <p class="spotbie-text-gradient text-center mt-5 text-uppercase">
             Total Points<br/><span class='sb-text-light-green-gradient'>{{ loyaltyPointReward | number:'1.0':'en-US' }}</span>
