--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -70,7 +70,9 @@
                     type="text"
                     placeholder="250"
                     maxlength="6"
+                    prefix="$"
                     thousandSeparator=","
+                    decimalMarker="."
                     mask="separator.0" />
 
             <h6 class='mt-3 mb-3 sb-text-light-green-gradient text-uppercase'
