--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -39,12 +39,13 @@
             </h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $159.99/monthly
+              $249.99/monthly
             </h2>
 
             <div class="text-uppercase text-center">
               <p class="spotbie-text-gradient">Loyalty Program</p>
               <p class="spotbie-text-gradient">Local Exposure</p>
+              <p class="spotbie-text-gradient">Upload Rewards</p>
               <p class="spotbie-text-gradient">Header Banner Ads</p>
               <p class="spotbie-text-gradient">Default Max Reward Rate</p>
             </div>
@@ -66,7 +67,7 @@
             </h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $259.99/monthly
+              $349.99/monthly
             </h2>
 
             <div class="text-uppercase text-center">
