--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -433,11 +433,12 @@
               <span
                 style="font-size: 1.2rem"
                 class="sb-text-light-green-gradient"
-                >$159.99/monthly</span
+                >$249.99/monthly</span
               >
               <ul>
                 <li>Loyalty Program</li>
                 <li>Local Exposure</li>
+                <li>Upload Rewards</li>
                 <li>Header Banner Ads</li>
                 <li>Default Max Reward Rate</li>
               </ul>
@@ -450,7 +451,7 @@
               <span
                 style="font-size: 1.2rem"
                 class="sb-text-light-green-gradient"
-                >$259.99/monthly</span
+                >$349.99/monthly</span
               >
               <ul>
                 <li>+Starter Package</li>
@@ -545,11 +546,12 @@
                 <span
                   style="font-size: 1.2rem"
                   class="sb-text-light-green-gradient"
-                  >$159.99/monthly</span
+                  >$249.99/monthly</span
                 >
                 <ul>
                   <li>Loyalty Program</li>
                   <li>Local Exposure</li>
+                  <li>Upload Rewards</li>
                   <li>Header Banner Ads</li>
                   <li>Default Max Reward Rate</li>
                 </ul>
@@ -563,7 +565,7 @@
                 <span
                   style="font-size: 1.2rem"
                   class="sb-text-light-green-gradient"
-                  >$259.99/monthly</span
+                  >$349.99/monthly</span
                 >
                 <ul>
                   <li>+Starter Package</li>
