--- a/src/app/make-payment/make-payment.component.html
+++ b/src/app/make-payment/make-payment.component.html
@@ -37,10 +37,11 @@
 
     <div *ngIf="paymentType == 'business-membership'" class="mb-4">
       <p class="spotbie-text-gradient text-uppercase mt-4">
-        STARTER $159.99/month
+        STARTER $249.99/month
       </p>
 
-      <p class="sb-text-light-green-gradient mt-4">Award Loyalty Points</p>
+      <p class="sb-text-light-green-gradient mt-4">Loyalty Program</p>
+      <p class="sb-text-light-green-gradient mt-4">Local Exposure</p>
       <p class="sb-text-light-green-gradient mt-1">Upload Rewards</p>
       <p class="sb-text-light-green-gradient mt-1">Default Max Reward Rate</p>
       <p class="sb-text-light-green-gradient mt-1">Header Banner Ads</p>
@@ -48,15 +49,18 @@
 
     <div *ngIf="paymentType == 'business-membership-1'" class="mb-4">
       <p class="spotbie-text-gradient text-uppercase mt-4">
-        Business Membership $259.99/month
+        Business Membership $349.99/month
       </p>
 
       <p class="sb-text-light-green-gradient mt-4">+Starter Package</p>
+      <p class="sb-text-light-green-gradient mt-4">+Loyalty Tiers</p>
       <p class="sb-text-light-green-gradient mt-1">
-        +Header, Footer, Nearby Featured Ads
+        +Header & Footer Ads
       </p>
+      <p class="sb-text-light-green-gradient mt-1">+5,000 SMS & 5,000 e-mail</p>
       <p class="sb-text-light-green-gradient mt-1">+0.01% Max Reward Rate</p>
-      <p class="sb-text-light-green-gradient mt-1">+Text Messaging</p>
+      <p class="sb-text-light-green-gradient mt-1">+Feedback</p>
+      <p class="sb-text-light-green-gradient mt-1">+Customer Insights</p>
     </div>
 
     <div *ngIf="paymentType == 'business-membership-2'" class="mb-4">
