CHANGED: fixed is_food_truck bug

--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -93,7 +93,7 @@
 
       <ng-container
         *ngIf="
-          (user$ | async)?.business.is_food_truck &&
+          (user$ | async)?.business?.is_food_truck &&
           this.userType === eAllowedAccountTypes.PlaceToEat
         "
       >
