ADDED: Email and Feedback

--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/customer-manager/customer-manager.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/customer-manager/customer-manager.component.html
@@ -8,11 +8,17 @@
 
   <section>
     <div class="example-button-row">
-      <button mat-button color="accent" (click)="openRecentGuests()">
+      <button mat-button color="primary" (click)="openRecentGuests()">
         Recent Guests
       </button>
       <button mat-button color="primary" (click)="openSmsHistory()">
         SMS History
+      </button>
+      <button mat-button color="primary" (click)="openEmailHistory()">
+        Email History
+      </button>
+      <button mat-button color="primary" (click)="openFeedback()">
+        Feedback
       </button>
     </div>
   </section>
