--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/customer-manager/email-history/email-history-dialog.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/customer-manager/email-history/email-history-dialog.component.html
@@ -1,7 +1,7 @@
-<div class="spotbie-overlay-window p-3">
-  <h1 class="spotbie-text-gradient">EMAIL HISTORY</h1>
+<h1 mat-dialog-title>EMAIL HISTORY</h1>
 
-  <p class="pt-3">
+<div mat-dialog-content>
+  <p>
     This is a list of mass email-messages you have sent lately.
   </p>
 
