--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/customer-manager/email/email.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/customer-manager/email/email.component.html
@@ -1,20 +1,19 @@
-<div class="spotbie-overlay-window p-3">
-  <h1 class="spotbie-text-gradient">
-    MASS E-MAIL
-  </h1>
-
+<h1 mat-dialog-title>
+  MASS E-MAIL
+</h1>
+<div mat-dialog-content>
   <form [formGroup]="emailForm">
     <p>
       What would you like to tell your recent guests? Email will be sent to recent guests that have visited your business.
     </p>
     <p *ngIf="submitted && f.emailBody.errors" class="spotbie-invalid-feedback text-uppercase spotbie-text-gradient spotbie-error">
-      <span *ngIf="f.emailBody.errors.required">
-        Email body is required.
-      </span>
+    <span *ngIf="f.emailBody.errors.required">
+      Email body is required.
+    </span>
 
       <span *ngIf="f.emailBody.errors.maxlength || f.emailBody.errors.minlength">
-        Email must be between 200 and 1,200 characters long.
-      </span>
+      Email must be between 200 and 1,200 characters long.
+    </span>
     </p>
     <mat-form-field>
       <mat-label>Email Body</mat-label>
@@ -27,15 +26,14 @@
                 cdkAutosizeMaxRows="15"></textarea>
     </mat-form-field>
   </form>
-
-  <div>
-    <button mat-button
-            [style.color]="'white'"
-            [style.background-color]="'#332f3e'"
-            (click)="closeDialog()">Close</button>
-    <button mat-button
-            [style.color]="'white'"
-            [style.background-color]="'#332f3e'"
-            (click)="sendMessage()">Send</button>
-  </div>
+</div>
+<div mat-dialog-actions>
+  <button mat-button
+          [style.color]="'white'"
+          [style.background-color]="'#332f3e'"
+          (click)="closeDialog()">Close</button>
+  <button mat-button
+          [style.color]="'white'"
+          [style.background-color]="'#332f3e'"
+          (click)="sendMessage()">Send</button>
 </div>
