CHANGED: allow tiers on all memberships

--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -14,7 +14,7 @@
     class="text-uppercase sb-text-light-green-gradient"
     style="font-size: 1.8rem; padding: 0 10px"
   >
-    BUSINESS GROWTH<br />ASSISTANT
+    LOYALTY POINTS
   </h1>
   <br />
 
