--- a/src/app/make-payment/make-payment.component.html
+++ b/src/app/make-payment/make-payment.component.html
@@ -43,6 +43,7 @@
       <p class="sb-text-light-green-gradient mt-4">Loyalty Program</p>
       <p class="sb-text-light-green-gradient mt-4">Local Exposure</p>
       <p class="sb-text-light-green-gradient mt-1">Upload Rewards</p>
+      <p class="sb-text-light-green-gradient mt-1">Loyalty Tiers</p>
       <p class="sb-text-light-green-gradient mt-1">Default Max Reward Rate</p>
       <p class="sb-text-light-green-gradient mt-1">Header Banner Ads</p>
     </div>
@@ -53,7 +54,6 @@
       </p>
 
       <p class="sb-text-light-green-gradient mt-4">+Starter Package</p>
-      <p class="sb-text-light-green-gradient mt-4">+Loyalty Tiers</p>
       <p class="sb-text-light-green-gradient mt-1">
         +Header & Footer Ads
       </p>
