--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -46,6 +46,7 @@
               <p class="spotbie-text-gradient">Loyalty Program</p>
               <p class="spotbie-text-gradient">Local Exposure</p>
               <p class="spotbie-text-gradient">Upload Rewards</p>
+              <p class="spotbie-text-gradient">Loyalty Tiers</p>
               <p class="spotbie-text-gradient">Header Banner Ads</p>
               <p class="spotbie-text-gradient">Default Max Reward Rate</p>
             </div>
@@ -72,7 +73,6 @@
 
             <div class="text-uppercase text-center">
               <p class="spotbie-text-gradient">+Starter Package</p>
-              <p class="spotbie-text-gradient">+Loyalty Tiers</p>
               <p class="spotbie-text-gradient">+Footer Banner Ads</p>
               <p class="spotbie-text-gradient">+0.01% Max Reward Rate</p>
               <p class="spotbie-text-gradient">+5,000 SMS & 5,000 e-mails</p>
