--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -439,6 +439,7 @@
                 <li>Loyalty Program</li>
                 <li>Local Exposure</li>
                 <li>Upload Rewards</li>
+                <li>Loyalty Tiers</li>
                 <li>Header Banner Ads</li>
                 <li>Default Max Reward Rate</li>
               </ul>
@@ -455,7 +456,6 @@
               >
               <ul>
                 <li>+Starter Package</li>
-                <li>+Loyalty Tiers</li>
                 <li>+Footer Banner Ads</li>
                 <li>+0.01% Max Reward Rate</li>
                 <li>+5,000 SMS & 5,000 e-mails</li>
@@ -552,6 +552,7 @@
                   <li>Loyalty Program</li>
                   <li>Local Exposure</li>
                   <li>Upload Rewards</li>
+                  <li>Loyalty Tiers</li>
                   <li>Header Banner Ads</li>
                   <li>Default Max Reward Rate</li>
                 </ul>
@@ -569,7 +570,6 @@
                 >
                 <ul>
                   <li>+Starter Package</li>
-                  <li>+Loyalty Tiers</li>
                   <li>+Footer Banner Ads</li>
                   <li>+0.01% Max Reward Rate</li>
                   <li>+5,000 SMS & 5,000 e-mails</li>
